--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -80,3 +80,8 @@
   border-radius: 9px !important;
   box-shadow: 0 0 177px 13px rgba(142, 7, 255, 0.05) !important;
 }
+
+.die {
+  -webkit-transform-style: preserve-3d !important;
+
+}
